# mcp-neo4j-graphrag

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: ADVANCED.md
src/mcp_neo4j_graphrag/: server.py  utils.py
